--- a/app/src/main/res/drawable/profile_pic_bg.xml
+++ b/app/src/main/res/drawable/profile_pic_bg.xml
@@ -6,6 +6,6 @@
     <solid android:color="@android:color/transparent" />
 
     <stroke
-        android:width="2dp"
-        android:color="@android:color/darker_gray" />
+        android:width="3dp"
+        android:color="@color/colorPrimaryDark" />
 </shape>
