--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,12 +5,10 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="errorColor">#F1948A</color>
 
-    <color name="textColor1">#323232</color>
     <color name="textColor2">#4c4c4c</color>
-    <color name="default_bg_color">#f1f2f4</color>
-
-    <color name="detail_arrow_bg">#e6d7ff</color>
-    <color name="detail_card_bg">#f4ecf4</color>
 
     <color name="white_color">#ffffff</color>
+
+    <color name="accepted_green">#25d631</color>
+    <color name="rejected_red">#ce1a1a</color>
 </resources>
