--- a/app/src/main/res/layout/fragment_match_making.xml
+++ b/app/src/main/res/layout/fragment_match_making.xml
@@ -33,16 +33,13 @@
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="16dp"
         android:textAppearance="@style/retryButtonText"
-        android:text="@string/retry"
         app:layout_constraintTop_toBottomOf="@+id/noContentAvailable"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/matchMakingRv"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:clipToPadding="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -52,7 +49,7 @@
 
     <ProgressBar
         android:id="@+id/progressBar"
-        style="?android:attr/progressBarStyle"
+        style="?android:attr/progressBarStyleLarge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="@+id/matchMakingRv"
