--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,12 +11,14 @@
         <item name="android:gravity">center</item>
         <item name="android:fontFamily">sans-serif-condensed-medium</item>
         <item name="android:textColor">@color/white_color</item>
+        <item name="android:text">@string/retry</item>
         <item name="paddingStart">12dp</item>
         <item name="paddingEnd">12dp</item>
         <item name="android:paddingTop">4dp</item>
         <item name="android:paddingBottom">4dp</item>
         <item name="android:textSize">28sp</item>
     </style>
+
     <style name="noDataFoundStyle" parent="@android:style/TextAppearance.Medium">
         <item name="android:gravity">center</item>
         <item name="android:layout_width">0dp</item>
@@ -25,16 +27,22 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:fontFamily">sans-serif-medium</item>
         <item name="android:textColor">@color/white_color</item>
+        <item name="android:layout_marginBottom">@dimen/standard_bottom_margin</item>
+
         <item name="android:textSize">24sp</item>
     </style>
+
     <style name="currentStateStyle" parent="@android:style/TextAppearance.Medium">
         <item name="android:gravity">center</item>
         <item name="android:fontFamily">sans-serif-condensed-medium</item>
         <item name="android:textSize">18sp</item>
+        <item name="android:rotation">-30</item>
     </style>
 
     <style name="basicInfoStyle" parent="@android:style/TextAppearance.Medium">
         <item name="android:gravity">center</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">wrap_content</item>
         <item name="android:fontFamily">sans-serif-medium</item>
         <item name="android:textColor">@color/textColor2</item>
         <item name="android:textSize">16sp</item>
@@ -42,6 +50,8 @@
 
     <style name="userNameStyle" parent="@android:style/TextAppearance.Medium">
         <item name="android:gravity">center</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">wrap_content</item>
         <item name="android:fontFamily">sans-serif-condensed-medium</item>
         <item name="android:textColor">@color/colorPrimaryDark</item>
         <item name="android:textSize">20sp</item>
@@ -52,6 +62,34 @@
         <item name="android:fontFamily">sans-serif</item>
         <item name="android:textColor">@color/white_color</item>
         <item name="android:textSize">24sp</item>
+    </style>
+
+    <style name="match_card_style" parent="Widget.MaterialComponents.CardView">
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="cardCornerRadius">8dp</item>
+        <item name="cardElevation">8dp</item>
+        <item name="cardBackgroundColor">@color/white_color</item>
+        <item name="android:layout_gravity">center</item>
+    </style>
+
+    <style name="profile_pic_style">
+        <item name="android:layout_height">128dp</item>
+        <item name="android:layout_width">128dp</item>
+        <item name="android:padding">2dp</item>
+        <item name="android:background">@drawable/profile_pic_bg</item>
+    </style>
+
+    <style name="reject_button_style">
+        <item name="android:layout_height">64dp</item>
+        <item name="android:layout_width">64dp</item>
+        <item name="android:background">@drawable/close</item>
+    </style>
+
+    <style name="accept_button_style">
+        <item name="android:layout_height">64dp</item>
+        <item name="android:layout_width">64dp</item>
+        <item name="android:background">@drawable/tick</item>
     </style>
 
 </resources>
