--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -69,6 +69,7 @@
         <item name="android:layout_width">match_parent</item>
         <item name="cardCornerRadius">8dp</item>
         <item name="cardElevation">8dp</item>
+        <item name="android:layout_margin">4dp</item>
         <item name="cardBackgroundColor">@color/white_color</item>
         <item name="android:layout_gravity">center</item>
     </style>
