--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,12 +11,11 @@
         <item name="android:gravity">center</item>
         <item name="android:fontFamily">sans-serif-condensed-medium</item>
         <item name="android:textColor">@color/white_color</item>
-        <item name="android:text">@string/retry</item>
         <item name="paddingStart">12dp</item>
         <item name="paddingEnd">12dp</item>
         <item name="android:paddingTop">4dp</item>
         <item name="android:paddingBottom">4dp</item>
-        <item name="android:textSize">28sp</item>
+        <item name="android:textSize">20sp</item>
     </style>
 
     <style name="noDataFoundStyle" parent="@android:style/TextAppearance.Medium">
@@ -70,6 +69,7 @@
         <item name="cardCornerRadius">8dp</item>
         <item name="cardElevation">8dp</item>
         <item name="android:layout_margin">4dp</item>
+        <item name="android:animateLayoutChanges">true</item>
         <item name="cardBackgroundColor">@color/white_color</item>
         <item name="android:layout_gravity">center</item>
     </style>
